# AQUA

./: .coverage.l40054.lvt.dkrz.de.3770289.XpJVpnYx  .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  atm_global_bias.ipynb  bootstrap.ipynb  codecov.yml  common_environment.yml  config.aqua-analysis-test.yaml  decumulate.ipynb  download_data_for_tests.sh  environment-common.yml  environment.yml  intake_gsv.py  load_aqua_lumi.sh  mask.ipynb  pyproject.toml  pytest.ini  radiation.ipynb  requirements-py39.yml  setup.py  test_gsv.ipynb  test_intake.ipynb  test_intake_new2.ipynb  tests.sh
.github/: pull_request_template.md
diagnostics/ensemble/: .cli_timeseries_ensemble.py.swp  README.md  __init__.py  ensemble_latlon.py  ensemble_timeseries.py  ensemble_zonal.py  pyproject.toml
diagnostics/ensemble/cli/: cli_atmglobalmean_ensemble.py  cli_timeseries_ensemble.py  cli_zonal_ensemble.py  config_atmglobalmean_ensemble.yaml  config_timeseries_ensemble.yaml  config_zonalmean_ensemble.yaml
diagnostics/ensemble/ensemble/: __init__.py  ensemble_class.py
diagnostics/ensemble/notebooks/: ensemble_atmglobalmean.ipynb  ensemble_timeseries.ipynb  ensemble_zonalaverage.ipynb
diagnostics/global_time_series/: README.md  __init__.py  env-timeseries.yaml  functions.py  gregory.py  pyproject.toml  reference_data.py  seasonalcycle.py  timeseries.py  timeseries_functions.py
diagnostics/global_time_series/cli/: README.md  cli_definitive.py  cli_global_time_series.py  cli_global_time_series_multiple_vars.py  config.yaml  config_seasonal_cycles_atm.yaml  config_time_series.yaml  config_time_series_atm.yaml  config_time_series_atm_historical.yaml  config_time_series_atm_scenario.yaml  config_time_series_control_run.yaml  config_time_series_oce.yaml  config_time_series_oce_historical.yaml  config_time_series_oce_scenario.yaml  levante_timeseries-submitter.sh  lumi_timeseries-submitter.sh
diagnostics/global_time_series/deliverable/: config_deliverable.yaml  deliverable.ipynb  submitter.sh
diagnostics/global_time_series/global_time_series/: __init__.py  gregory.py  reference_data.py  seasonalcycle.py  timeseries.py  util.py
diagnostics/global_time_series/notebooks/: global_time_series.ipynb  seasonal_bias.ipynb  seasonal_cycles.ipynb
diagnostics/ocean3d/: README.md  __init__.py  config.yaml  global_ocean.py  ocean_circulation.py  ocean_drifts.py  ocean_util.py  pyproject.toml
diagnostics/ocean3d/cli/: cli_ocean3d.py  config.circulation.yaml  config.drift.yaml  config.yaml  ocean3d_cli.py  old_cli_ocean3d.py  slurm_job_using_container.sh  slurm_levante.sh
diagnostics/ocean3d/deliverable/: d340.7.3.3.ipynb  d340.7.3.4.sh
diagnostics/ocean3d/notebooks/: global_ocean.ipynb  multi_model_analysis.ipynb  ocean_circulation.ipynb  ocean_drifts.ipynb
diagnostics/ocean3d/ocean3d/: __init__.py  ocean_circulation.py  ocean_drifts.py  ocean_util.py
diagnostics/seaice/: README.md  Untitled.ipynb  __init__.py  monitorExtent.py  notebook_D733.ipynb  pyproject.toml  regions.yml  seaIceClass.py  seaIceDiags.ipynb  seaice.ipynb  seaice.py  seaice_class.py  seaice_commondiags.py  testClass.ipynb  testClass.py
diagnostics/seaice/cli/: README.md  cli_seaice.py  config.yml  config_Concentration.yaml  config_Extent.yaml  config_ExtentConcentration.yaml  config_Extent_fixNoData.yaml  config_Thickness.yaml  config_Volume.yaml  config_VolumeThickness.yml  regions_selection.yml  seaice_cli.py
diagnostics/seaice/config/: config_levante.yaml
diagnostics/seaice/notebooks/: .seaice.py.swo  README.md  maps.ipynb  sandBox.ipynb  sandbox.ipynb  seaice.ipynb  seaice.py
diagnostics/seaice/seaice/: seaice_class.py
diagnostics/teleconnections/: README.md  cdo_testing.py  env-teleconnections.yaml  index.py  plots.py  pyproject.toml  tools.py
diagnostics/teleconnections/cli/: README.md  cli_bootstrap.py  cli_config_atm.yaml  cli_config_oce.yaml  cli_teleconnections.py  config_bootstrap.yaml  teleconnections-submitter.tmpl  teleconnections_config.yaml
diagnostics/teleconnections/config/: teleconnections-ci.yaml  teleconnections-destine.yaml  teleconnections-netgems.yaml  teleconnections.yaml
diagnostics/teleconnections/deliverable/: config_deliverable.yaml  deliverable.ipynb  icon-avg_tos.sh  submitter.sh
diagnostics/teleconnections/notebooks/: Comparison_class.ipynb  ENSO.ipynb  ENSO_control_2t.ipynb  ENSO_era5_2t.ipynb  ENSO_historical.ipynb  ENSO_nino3.4.ipynb  ENSO_nino3.4_cycle3.ipynb  ENSO_nino3.4cycle3.ipynb  ENSO_reader_fldmean.ipynb  MJO.ipynb  MJO_cycle3.ipynb  NAO.ipynb  NAO_ENSO_control.ipynb  NAO_control.ipynb  NAO_cycle3.ipynb  NAO_historical.ipynb  Teleconnections_class.ipynb  class_test.ipynb  comparison.ipynb  concordance_map.ipynb  demonstration.ipynb  simple_map.ipynb
diagnostics/teleconnections/teleconnections/: __init__.py  bootstrap.py  cdo_testing.py  comparison.py  index.py  mjo.py  p2_bootstrap.py  plots.py  statistics.py  tc_class.py
diagnostics/tropical_rainfall/: README.md  __init__.py  config-tropical-rainfall.yml  env-tropical-rainfall.yml  pyproject.toml  tropical_rainfall_class.py  tropical_rainfall_func.py
diagnostics/tropical_rainfall/cli/: cli_config_trop_rainfall.yml  cli_hist_calculation.py  cli_hist_calculation_slurm.py  cli_tropical_rainfall.py  cli_tropical_rainfall_slurm.py  run_cli_tropical_rainfall.sh  script_with_dask_cluster.py  trop_rainfall_config.yml
diagnostics/tropical_rainfall/enviroment/: env-tropical-rainfall.yml  env_setup.sh  merged.yml
diagnostics/tropical_rainfall/notebooks/: ICON_histogram_plotting.ipynb  big_demo.ipynb  comparison_of_lowres_models.ipynb  comparison_with_observations.ipynb  demo_ICON.ipynb  demo_for_lowres_data.ipynb  diagnostic_example_for_2t.ipynb  diagnostic_vs_streaming.ipynb  for_live_demonstration.ipynb  histogram_calculation.ipynb  histogram_calculation_of_lowres.ipynb  histogram_calculations.ipynb  histogram_calculations_of_highres.ipynb  histogram_comparison.ipynb  histogram_plotting.ipynb  simplest_example.ipynb  simplest_example.py
(+1698 files in other folders)
