[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setuptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "aqua"
dynamic = ["version"]
authors = [ # AQUA core team reported here
    {name = "The AQUA team", email = "p.davini@isac.cnr.it"},
    {name = "Paolo Davini", email = "p.davini@isac.cnr.it"},
    {name = "Matteo Nurisso", email = "m.nurisso@isac.cnr.it"},
    {name = "Silvia Caprioli", email = "silvia.caprioli@polito.it"},
    {name = "Jost von Hardenberg", email = "jost.hardenberg@polito.it"},
    {name = "Natalia Nazarova", email = "natalia.nazarova@polito.it"},
    {name = "Supriyo Ghosh", email = "supriyo.ghosh@bsc.es"}
]
description = "AQUA; a model evaluation framework for high-resolution climate model simulations"
readme = "README.md"
keywords = ["climate", "modeling", "diagnostics", "high-resolution"]
license = {text = "Private"}
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "cartopy",
    "cfgrib",
    "dask",
    "dask_jobqueue",
    "eccodes==2.38.0",
    "docker",
    "gcsfs", # Google Cloud Storage File System
    "gribscan",
    "pandas",
    "intake==0.7.0", # Version 2 is not yet compatible with intake-xarray
    "intake-esm",
    "intake-xarray",
    "jinja2",
    "matplotlib",
    "metpy",
    "numpy",
    "pydantic",
    "pypdf",
    "pyYAML",
    "ruamel.yaml",
    "smmregrid==0.0.6",
    "sparse",
    "xarray<2024.10.0",
    "kerchunk",
    "h5py@git+https://github.com/h5py/h5py.git@3.12.1", #specific github pin to avoid installation of binaries
    "fastparquet",
    "pyfdb@git+https://github.com/ecmwf/pyfdb.git@0.0.3",
    "gsv@git+https://oauth2:pXj19aBDApiBPs1YgwuZ@earth.bsc.es/gitlab/digital-twins/de_340-2/gsv_interface.git@v2.6.1"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
notebooks = [
    "ipykernel",
    "healpy"
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "pandoc",
    "pycobertura"
]
diagnostics = [
    "ECmean4"
]
all = [
    "aqua[docs]",
    "aqua[notebooks]",
    "aqua[tests]",
    "aqua[diagnostics]"
]

[project.scripts]
aqua = "aqua.cli.main:main"

[project.urls]
homepage = "https://aqua-web-climatedt.2.rahtiapp.fi"
documentation = "https://aqua-web-climatedt.2.rahtiapp.fi/documentation/index.html"
repository = "https://github.com/DestinE-Climate-DT/AQUA/"
issues = "https://github.com/DestinE-Climate-DT/AQUA/issues/"

[tool.setuptools.package-data]
platforms = ["any"]

[tool.setuptools.package-dir]
"aqua" = "src/aqua"
"aqua.diagnostics" = "src/aqua_diagnostics"

[tool.setuptools.dynamic]
version = {attr = "aqua.__version__"}

[tool.pytest.ini_options]
addopts = "-v --cov=aqua --cov-config=.coveragerc"
testpaths = [
    "tests"
]
markers = [
    "aqua: mark test as AQUA framework",
    "slow: tests which are slow",
    "sbatch: tests which require sbatch",
    "graphics: tests which deal with graphics",
    "gsv: mark test that requires ECMWF FDB libraries",
    # beginning of diagnostic tests
    "dummy: mark test for dummy diagnostic",
    "teleconnections: mark test for teleconnections diagnostic",
    "tropical_rainfall: mark test for tropical_rainfall diagnostic"
]

# This appears to be the correct configuration, but for some reason
# pytest-cov doesn't appear to be reading this? We are passing some
# options via the command-line for now, but this needs to be fixed.
# Ref: https://github.com/pytest-dev/pytest-cov/issues/390
[tool.coverage.run]
branch = true
command_line = '-m pytest tests'
source = ["src/aqua"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]

[tool.coverage.html]
show_contexts = true
directory = "coverage/html"
