[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setiptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "ocean3d"
dynamic = ["version"]
authors = [
    {name = "Supriyo Ghosh", email = "supryo.gosh@bsc.es"},
    {name = "Pablo Ortega", email = "pablo.ortega@bsc.es"}
]
description = "Ocean circulation and drift diagnostic"
readme = "README.md"
keywords = ["ocean_util", "ocean_drift", "ocean_circulation"]
license = {text = "Private"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operative System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "xarray"
]

[tool.setuptools.package-data]
platforms = [
    "any"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "ocean3d.__version__"}