[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setiptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "seaice"
dynamic = ["version"]
authors = [
    {name = "François Massonet", email = "francois.massonnet@uclouvain.be"}
]
description = "Sea ice diagnostic"
readme = "README.md"
keywords = ["seaice", "arctic", "antarctic", "seaice thickness", "seaice extent", "seaice volume"]
license = {text = "Private"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operative System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "dask",
    "matplotlib",
    "xarray"
]

[tool.setuptools.package-data]
platforms = [
    "any"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "seaice.__version__"}
