[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setiptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "teleconnections"
dynamic = ["version"]
authors = [
    {name = "Nurisso Matteo", email = "m.nurisso@isac.cnr.it"}
]
description = "Teleconnections indices diagnostic"
readme = "README.md"
keywords = ["teleconnections", "climate", "indices"]
license = {text = "Private"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operative System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "xarray"
]

[tool.setuptools.package-data]
platforms = [
    "any"
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "teleconnections.__version__"}